# stm32h7

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  build.sh  main.hex  memory.x  sections.x
.cargo/: config.toml
docs/superpowers/plans/: 2026-07-22-stm32h7-rust-firmware-impl.md
docs/superpowers/specs/: 2026-07-22-stm32h7-rust-firmware-design.md
scripts/: flash.sh
src/: ankle.rs  canproto.rs  config.rs  drivers.rs  hal.rs  lib.rs  mlp.rs  observation.rs  pipeline.rs
tools/: quantize_onnx.py
weights/: manifest.json  test_fixtures.json
